--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,5 +42,5 @@ end
 
 target 'OneSignalNotificationServiceExtension' do
   use_frameworks! :linkage => :static
-    pod 'OneSignalXCFramework', '5.2.8'
+    pod 'OneSignalXCFramework', '>= 5.0', '< 6.0'
 end
