--- a/ios/Podfile
+++ b/ios/Podfile
@@ -41,6 +41,6 @@ post_install do |installer|
 end
 
 target 'OneSignalNotificationServiceExtension' do
-  use_frameworks! :linkage => :static
-    pod 'OneSignalXCFramework', '>= 5.0', '< 6.0'
+  use_frameworks!
+  pod 'OneSignalXCFramework', '>= 5.0.0', '< 6.0'
 end
