--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>O app precisa acessar sua localização para fornecer conteúdo personalizado baseado em sua região.</string>
 	<key>OneSignal_app_groups_key</key>
 	<string>group.com.mycompany.eondigital.onesignal</string>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
